apps/trek/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trek
  namespace: trek
  labels:
    app: trek
spec:
  selector:
    app: trek
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
